# tagsistant

./: .autotools  .cproject  ChangeLog  Makefile  Makefile.in  autogen.sh  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  configure.ac.barebone
.externalToolBuilders/: Automatic Build Number Updater.launch
autom4te.cache/: output.0  requests  traces.0
debian/: README.source  changelog  copyright  emacsen-startup.ex  manpage.xml.ex  postinst.ex  prerm.ex  tagsistant.cron.d.ex  tagsistant.default.ex  tagsistant.doc-base.EX
src/: Makefile  Makefile.am  Makefile.in  Session.vim  buildnumber.h  debug.h  debug_free_calls.h  deduplication.c  disk_backend.c  mount.tagfs.c  mount.tagfs.h  objects.c  operations_blueprint  path_resolution.c  path_resolution.h  plugin.c  plugin.h  reasoner.c  sql.c  sql.h  sql_backend_mysql.c  sql_backend_sqlite.c  tagsistant.c  tagsistant.h  test_suite.pl  tp_generic.c  tp_gif.c  tp_html.c  tp_jpeg.c  tp_mp3.c  tp_ogg.c  tp_png.c  tp_xml.c  update_build_number.pl  utils.c
src/.deps/: mount_tagfs-mount.tagfs.Po  mount_tagfs-path_resolution.Po
src/fuse_operations/: access.c  chmod.c  chown.c  flush.c  getattr.c  link.c  mkdir.c  mknod.c  open.c  operations.h  read.c  readdir.c  readlink.c  release.c  rename.c  rmdir.c  statfs.c  statvfs.c  symlink.c  truncate.c  unlink.c  utime.c  write.c
src/plugins/: Makefile.am  Makefile.in  tp_generic.c  tp_gif.c  tp_html.c  tp_jpeg.c  tp_mp3.c  tp_ogg.c  tp_png.c  tp_xml.c
src/tagman/: Makefile.in  configure  tagman.glade  tagman.glade.bak
src/tagman/autom4te.cache/: traces.0  traces.1
src/tagman/src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  interface.c  interface.c.bak  main.c  tagman.h
tagman/: Makefile.in  aclocal.m4  configure
tagman/src/: Makefile.in  interface.c  tagman.h
trunk/: .autotools  .cproject  .project  AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.in  autogen.sh  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  configure.ac.barebone  prepare_commit.sh  prepare_revision.sh
trunk/.externalToolBuilders/: Automatic Build Number Updater.launch
trunk/autom4te.cache/: output.0  requests  traces.0
trunk/debian/: README.Debian  control  emacsen-install.ex  emacsen-remove.ex  init.d.ex  manpage.1.ex  manpage.sgml.ex  menu.ex  postrm.ex  preinst.ex  watch.ex
trunk/docs/: tagsistant_0.6.txt
trunk/src/: Makefile  Makefile.ac  Makefile.am  Makefile.in  Session.vim  buildnumber.h  debug.h  debug_free_calls.h  deduplication.c  disk_backend.c  fusexmp.c  mount.tagfs.c  mount.tagfs.h  note_sugli_oggetti  objects.c  operations_blueprint  path_resolution.c  path_resolution.h  plugin.c  plugin.h  reasoner.c  sql.c  sql.h  sql_backend_sqlite.c  tagsistant.c  tagsistant.h  test_suite.pl  tp_generic.c  tp_gif.c  tp_html.c  tp_jpeg.c  tp_mp3.c  tp_ogg.c  tp_png.c  tp_xml.c  update_build_number.pl  utils.c
trunk/src/.deps/: mount_tagfs-fuse_opt.Po  mount_tagfs-mount.tagfs.Po  mount_tagfs-path_resolution.Po
trunk/src/compat/: fuse_opt.c
trunk/src/fuse_operations/: access.c  chmod.c  chown.c  flush.c  getattr.c  link.c  mkdir.c  mknod.c  open.c  operations.h  read.c  readdir.c  readlink.c  release.c  rename.c  rmdir.c  statfs.c  statvfs.c  symlink.c  truncate.c  unlink.c  utime.c  write.c
trunk/src/plugins/: Makefile.am  Makefile.in  tp_generic.c  tp_gif.c  tp_html.c  tp_jpeg.c  tp_mp3.c  tp_ogg.c  tp_png.c  tp_xml.c
trunk/src/tagman/: configure  configure.in  tagman.glade  tagman.glade.bak  tagman.gladep.bak
trunk/src/tagman/autom4te.cache/: output.1
trunk/src/tagman/src/: Makefile  Makefile.in  callbacks.c  callbacks.h  interface.c.bak  interface.h  main.c  tagman.h
trunk/tagman/: Makefile.in  aclocal.m4  tagman.glade.bak
trunk/tagman/src/: Makefile.am  Makefile.in  callbacks.c  interface.h.bak
